k8s/ingress/ingress-haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-ingress
  namespace: default
  labels:
    app: haproxy-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy-ingress
  template:
    metadata:
      labels:
        app: haproxy-ingress
    spec:
      containers:
      - name: haproxy-ingress
        image: haproxytech/kubernetes-ingress:latest
        args:
          - --ingress.class=haproxy
          - --default-backend-service=default/default-backend
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
