k8s/ingress/ingress-haproxycontroller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy-ingress
  template:
    metadata:
      labels:
        app: haproxy-ingress
    spec:
      containers:
        - name: haproxy-ingress
          image: haproxytech/kubernetes-ingress:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          args:
            - "--default-backend-service=kube-system/default-http-backend"
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress
spec:
  selector:
    app: haproxy-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    - protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
