k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: haproxy-ingress
  annotations:
    kubernetes.io/ingress.class: "haproxy"  
spec:
  ingressClassName: "haproxy"
  rules:
    - host: dashboard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicea
                port:
                  number: 3000
